[tool.poetry]
name = "rag-system"
version = "0.1.0"
description = ""
authors = ["Germanifold <germanifold@outlook.com>"]
readme = "README.md"
packages = [{include = "rag_system", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.9.7 || >3.9.7,<3.13"
jupyter = "^1.0.0"
ipykernel = "^6.29.4"
pandas = "^2.2.2"
langchain = "^0.2.3"
langchain-community = "^0.2.4"
tqdm = "^4.66.4"
unstructured = "^0.14.5"
markdown = "^3.6"
chromadb = "^0.5.0"
langchain-openai = "^0.1.8"
pydantic = "^2.10.6"
typing-extensions = "^4.12.2"
streamlit = "^1.43.2"


[tool.poetry.group.dev.dependencies]
black = "^24.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
